--- a/MinServer 2.vcxproj
+++ b/MinServer 2.vcxproj
@@ -125,9 +125,11 @@
   <ItemGroup>
     <ClCompile Include="framework.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="md5.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="md5.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
