--- a/MinServer 2.vcxproj.filters
+++ b/MinServer 2.vcxproj.filters
@@ -48,4 +48,9 @@
       <Filter>Web files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="help.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
