Add ability of DLL controlling for uid-to-token request

--- a/MinServer 2.vcxproj
+++ b/MinServer 2.vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="md5.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="c_framework.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="md5.h" />
     <ClInclude Include="util.h" />
