Add README (finally...)

--- a/MinServer 2.vcxproj
+++ b/MinServer 2.vcxproj
@@ -136,6 +136,7 @@
   <ItemGroup>
     <None Include="mslib.js" />
     <None Include="mspara.js" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="help.txt" />
