DLL assiocation adds (But SOME BUG IN IT)

--- a/.gitignore
+++ b/.gitignore
@@ -285,3 +285,7 @@ __pycache__/
 /Dll1.dll
 /a
 /cc.html
+/Utility/DLL assiocation (utility)/pch.cpp
+/Utility/DLL assiocation (utility)/pch.h
+/$assiocate.txt
+/dau.dll
