--- a/MinServer 2.vcxproj
+++ b/MinServer 2.vcxproj
@@ -129,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="c_framework.h" />
+    <ClInclude Include="debugs.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="md5.h" />
     <ClInclude Include="util.h" />
