Add poster, and bug fixes

--- a/AdministrativeTools/AdministrativeTools.vcxproj
+++ b/AdministrativeTools/AdministrativeTools.vcxproj
@@ -160,6 +160,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
+    <None Include="PostFile.htm">
+      <DeploymentContent>true</DeploymentContent>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AdministrativeTools.h" />
