--- a/AdministrativeTools/AdministrativeTools.vcxproj.filters
+++ b/AdministrativeTools/AdministrativeTools.vcxproj.filters
@@ -13,9 +13,15 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Web Files">
+      <UniqueIdentifier>{bc9b62a6-410f-4b4c-b58c-4f81d4773aec}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
+    <None Include="PostFile.htm">
+      <Filter>Web Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AdministrativeTools.h">
