--- a/MinServer 2.vcxproj
+++ b/MinServer 2.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="md5.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="c_framework.h" />
     <ClInclude Include="debugs.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="md5.h" />
@@ -137,9 +138,7 @@
   <ItemGroup>
     <None Include="cpp.hint" />
     <None Include="mslib.js" />
-    <None Include="mslib.vbs" />
     <None Include="mspara.js" />
-    <None Include="mspara.vbs" />
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
