--- a/MinServer 2.vcxproj
+++ b/MinServer 2.vcxproj
@@ -133,6 +133,8 @@
     <ClInclude Include="debugs.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="md5.h" />
+    <ClInclude Include="sfs.h" />
+    <ClInclude Include="sfs_util.h" />
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
